gateway/httprouts/httproute-adminer-pgsql.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adminer-route
  namespace: default # Укажите нужный namespace
spec:
  parentRefs:
    - name: farm-gateway
      namespace: default
  hostnames:
    - adminer.${YOUR_LOAD_BALANCER_IP} # Измените YOUR_LOAD_BALANCER_IP на реальный IP балансировщика нагрузки
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: adminer
          port: 8080
