gateway/httprouts/httproute-portainer.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portainer-route
  namespace: portainer
spec:
  parentRefs:
    - name: farm-gateway
      namespace: default
  hostnames:
    - portainer.${YOUR_LOAD_BALANCER_IP}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: portainer
          port: 9000
