gateway/httprouts/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: farm-route
spec:
  parentRefs:
    - name: farm-gateway
  hostnames:
    - ${YOUR_LOAD_BALANCER_IP}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami-service
          port: 80
